crystal-facet-uml (1.66.2) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Docbook output restructured to allow more compact page rendering
  * Snap-to-grid feature does not snap to border anymore, only inner grid
  * No auto-save at close when there are no changes

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 19 Oct 2025 11:01:00 +0200

crystal-facet-uml (1.66.1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * When re-ordering diagrams in the children-subtree, these were moved to
    unexpected positions (Closes: #5)

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 19 Oct 2025 11:00:00 +0200

crystal-facet-uml (1.66.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * replaced deprecated gdk_texture_new_for_pixbuf, gdk_cairo_set_source_pixbuf
  * workaround for false positive Wstringop-overflow at utf8stringbuf.inl
  * in search + nav view, labels are linked to their corresponding diagran card
  * the file export options show an icon to indicate their purpose
  * the unsaved file icon has a more aggressive yellow color

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 11 Oct 2025 07:30:00 +0200

crystal-facet-uml (1.65.6) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Searching for a non-scenario-based relationship finds expected diagrams
  * Searching for a scenario relationship finds less superfluous occurrences
  * in html export, "appears in" links to own, current chapter are omitted

 -- Andreas Warnke <cfu@andreaswarnke.de>  Thu, 25 Sep 2025 06:00:00 +0200

crystal-facet-uml (1.65.5) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * if search for relationships in interactions, these are found
  * if search for relationships in interactions, non-interactions are skipped
  * if search for relationships agnostic to interactions, interactions skipped

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 14 Sep 2025 16:30:00 +0200

crystal-facet-uml (1.65.4) UNRELEASED; urgency=medium

  [ Andreas Warnke ]