@@ -337,6 +337,13 @@ void gui_simple_message_to_user_show_message_with_name ( gui_simple_message_to_u
         utf8stringbuf_append_str( &((*this_).private_temp_str), "Database file written: " );
         utf8stringbuf_append_str( &((*this_).private_temp_str), name );
     }
+    else if ( content_id == GUI_SIMPLE_MESSAGE_CONTENT_JSON_MODIFIED )
+    {
+        U8_LOG_EVENT( "GUI_SIMPLE_MESSAGE_CONTENT_JSON_MODIFIED" );
+        utf8stringbuf_append_str( &((*this_).private_temp_str), "Database file concurrently modified: " );
+        utf8stringbuf_append_str( &((*this_).private_temp_str), name );
+        utf8stringbuf_append_str( &((*this_).private_temp_str), "\nThese changes will be overwritten when saving!" );
+    }
     else
     {
         U8_LOG_ERROR("unexptected content_id");
