@@ -4,6 +4,7 @@ crystal-facet-uml (1.66.2) UNRELEASED; urgency=medium
   * Docbook output restructured to allow more compact page rendering
   * Snap-to-grid feature does not snap to border anymore, only inner grid
   * No auto-save at close when there are no changes
+  * Detection and warning in case of concurrently modified database file
 
  -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 19 Oct 2025 11:01:00 +0200
 
